New: working on charts plotting, halfway through

--- a/serial-sim/ui/chartwindow.ui
+++ b/serial-sim/ui/chartwindow.ui
@@ -17,16 +17,10 @@
    <item>
     <layout class="QVBoxLayout" name="vLCharts">
      <item>
-      <widget class="QChartView" name="graphicsViewAx"/>
-     </item>
-     <item>
-      <widget class="QChartView" name="graphicsViewAy"/>
-     </item>
-     <item>
-      <widget class="QChartView" name="graphicsViewGx"/>
-     </item>
-     <item>
       <widget class="QChartView" name="graphicsViewGy"/>
+     </item>
+     <item>
+      <widget class="QChartView" name="graphicsViewGz"/>
      </item>
     </layout>
    </item>
