--- a/serial-sim/ui/mainwindow.ui
+++ b/serial-sim/ui/mainwindow.ui
@@ -37,7 +37,7 @@
        <item>
         <widget class="QGroupBox" name="groupBoxDisplay">
          <property name="title">
-          <string>Values</string>
+          <string>Wartości</string>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_3">
           <item>
@@ -49,7 +49,7 @@
              <item>
               <widget class="QLabel" name="label">
                <property name="text">
-                <string>Position X</string>
+                <string>Położenie X</string>
                </property>
               </widget>
              </item>
@@ -100,7 +100,7 @@
              <item>
               <widget class="QLabel" name="label_2">
                <property name="text">
-                <string>Position Y</string>
+                <string>Położenie Y</string>
                </property>
               </widget>
              </item>
@@ -148,7 +148,7 @@
              <item>
               <widget class="QLabel" name="label_3">
                <property name="text">
-                <string>Velocity</string>
+                <string>Prędkość</string>
                </property>
               </widget>
              </item>
@@ -193,7 +193,7 @@
        <item>
         <widget class="QGroupBox" name="groupBoxConnectivity">
          <property name="title">
-          <string>Connectivity</string>
+          <string>Łączność</string>
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_4">
           <item>
@@ -201,14 +201,14 @@
             <item row="2" column="2">
              <widget class="QPushButton" name="pushButtonConnect">
               <property name="text">
-               <string>Connect</string>
+               <string>Połącz</string>
               </property>
              </widget>
             </item>
             <item row="2" column="3">
              <widget class="QPushButton" name="pushButtonDisconnect">
               <property name="text">
-               <string>Disconnect</string>
+               <string>Rozłącz</string>
               </property>
              </widget>
             </item>
@@ -218,7 +218,7 @@
             <item row="0" column="2">
              <widget class="QPushButton" name="pushButtonSearch">
               <property name="text">
-               <string>Find Devices</string>
+               <string>Szukaj urządzeń</string>
               </property>
              </widget>
             </item>
@@ -252,20 +252,27 @@
        <item>
         <widget class="QGroupBox" name="groupBoxControl">
          <property name="title">
-          <string>Control</string>
+          <string>Sterowanie</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_2">
           <item row="1" column="0">
            <widget class="QPushButton" name="pushButtonReset">
             <property name="text">
-             <string>Reset Position</string>
+             <string>Resetuj położenie</string>
             </property>
            </widget>
           </item>
           <item row="1" column="1">
            <widget class="QPushButton" name="pushButtonCharts">
             <property name="text">
-             <string>Open Charts</string>
+             <string>Otwórz okno wykresów</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="2">
+           <widget class="QPushButton" name="pushButtonTranslate">
+            <property name="text">
+             <string>Angielski</string>
             </property>
            </widget>
           </item>
